--- a/configs/text_mv.yaml
+++ b/configs/text_mv.yaml
@@ -16,7 +16,7 @@ density_thresh: 1
 ### Output
 outdir: logs
 mesh_format: obj
-save_path: ???
+save_path: out
 
 ### Training
 # guidance loss weights (0 to disable)
